chore: 单测 JVM 参数支持 JDK17 下 Robolectric 关闭文件流