@@ -60,6 +60,9 @@ android {
     testOptions {
         unitTests {
             isIncludeAndroidResources = true
+            all {
+                it.jvmArgs("--add-opens=java.base/java.io=ALL-UNNAMED")
+            }
         }
     }
     packaging {
